actually fix scrollbar

--- a/Launcher/app/components/Home.scss
+++ b/Launcher/app/components/Home.scss
@@ -2,3 +2,12 @@
   margin-top: 30px;
   margin-bottom: 20px;
 }
+
+body {
+  margin:0;
+}
+
+html
+{
+  overflow: hidden;
+}
